--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
+	<modules>
+		<module>springboot-rocketmq</module>
+        <module>springboot-banner</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -9,10 +14,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.wzt</groupId>
-	<artifactId>springboot-learning</artifactId>
+	<artifactId>springboot-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springboot-learning</name>
-	<description>Learning Note for Spring Boot</description>
+	<name>springboot-example</name>
+	<description>example Note for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
